; ModuleID = '/home/carl/AnghaBench/lwan/src/bin/tools/extr_mimegen.c_output_append_full.c'
source_filename = "/home/carl/AnghaBench/lwan/src/bin/tools/extr_mimegen.c_output_append_full.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.output = type { i64, i64, i8* }

@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.output*, i8*, i64)* @output_append_full to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @output_append_full(%struct.output* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.output*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  store %struct.output* %0, %struct.output** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load %struct.output*, %struct.output** %5, align 8
  %11 = getelementptr inbounds %struct.output, %struct.output* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* %7, align 8
  %14 = add i64 %12, %13
  store i64 %14, i64* %8, align 8
  %15 = load i64, i64* %8, align 8
  %16 = load %struct.output*, %struct.output** %5, align 8
  %17 = getelementptr inbounds %struct.output, %struct.output* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = icmp uge i64 %15, %18
  br i1 %19, label %20, label %50

20:                                               ; preds = %3
  br label %21

21:                                               ; preds = %27, %20
  %22 = load i64, i64* %8, align 8
  %23 = load %struct.output*, %struct.output** %5, align 8
  %24 = getelementptr inbounds %struct.output, %struct.output* %23, i32 0, i32 1
  %25 = load i64, i64* %24, align 8
  %26 = icmp uge i64 %22, %25
  br i1 %26, label %27, label %32

27:                                               ; preds = %21
  %28 = load %struct.output*, %struct.output** %5, align 8
  %29 = getelementptr inbounds %struct.output, %struct.output* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = mul i64 %30, 2
  store i64 %31, i64* %29, align 8
  br label %21

32:                                               ; preds = %21
  %33 = load %struct.output*, %struct.output** %5, align 8
  %34 = getelementptr inbounds %struct.output, %struct.output* %33, i32 0, i32 2
  %35 = load i8*, i8** %34, align 8
  %36 = load %struct.output*, %struct.output** %5, align 8
  %37 = getelementptr inbounds %struct.output, %struct.output* %36, i32 0, i32 1
  %38 = load i64, i64* %37, align 8
  %39 = trunc i64 %38 to i32
  %40 = call i8* @realloc(i8* %35, i32 %39)
  store i8* %40, i8** %9, align 8
  %41 = load i8*, i8** %9, align 8
  %42 = icmp ne i8* %41, null
  br i1 %42, label %46, label %43

43:                                               ; preds = %32
  %44 = load i32, i32* @errno, align 4
  %45 = sub nsw i32 0, %44
  store i32 %45, i32* %4, align 4
  br label %64

46:                                               ; preds = %32
  %47 = load i8*, i8** %9, align 8
  %48 = load %struct.output*, %struct.output** %5, align 8
  %49 = getelementptr inbounds %struct.output, %struct.output* %48, i32 0, i32 2
  store i8* %47, i8** %49, align 8
  br label %50

50:                                               ; preds = %46, %3
  %51 = load %struct.output*, %struct.output** %5, align 8
  %52 = getelementptr inbounds %struct.output, %struct.output* %51, i32 0, i32 2
  %53 = load i8*, i8** %52, align 8
  %54 = load %struct.output*, %struct.output** %5, align 8
  %55 = getelementptr inbounds %struct.output, %struct.output* %54, i32 0, i32 0
  %56 = load i64, i64* %55, align 8
  %57 = getelementptr inbounds i8, i8* %53, i64 %56
  %58 = load i8*, i8** %6, align 8
  %59 = load i64, i64* %7, align 8
  %60 = call i32 @memcpy(i8* %57, i8* %58, i64 %59)
  %61 = load i64, i64* %8, align 8
  %62 = load %struct.output*, %struct.output** %5, align 8
  %63 = getelementptr inbounds %struct.output, %struct.output* %62, i32 0, i32 0
  store i64 %61, i64* %63, align 8
  store i32 0, i32* %4, align 4
  br label %64

64:                                               ; preds = %50, %43
  %65 = load i32, i32* %4, align 4
  ret i32 %65
}

declare dso_local i8* @realloc(i8*, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
